tests/ui/associated-item/associated-item-duplicate-names-2.stderr
error[E0592]: duplicate definitions with name `bar`
  --> $DIR/associated-item-duplicate-names-2.rs:5:5
   |
LL |     const bar: bool = true;
   |     --------------- other definition for `bar`
LL |     fn bar() {}
   |     ^^^^^^^^ duplicate definitions for `bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0592`.
