tests/ui/associated-item/associated-item-duplicate-names-2.rs
struct Foo;

impl Foo {
    const bar: bool = true;
    fn bar() {} //~ ERROR duplicate definitions
}

fn main() {}
